objects/Score__c.object
<CustomObject>
    <description>To store the Overall Score</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Scores</relationshipLabel>
        <relationshipName>Scores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_From__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Active From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Active_To__c</fullName>
        <description>For the latest score , this field would be blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Active To</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Score__c</fullName>
        <label>Most Recent Score</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Version</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Score</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Score Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>